// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayMultiStepNav activates step on click 1`] = `
<div>
  <ol
    class="multi-step-nav multi-step-nav-collapse-sm multi-step-indicator-label-bottom"
  >
    <li
      class="multi-step-item complete multi-step-item-expand"
    >
      <div
        class="multi-step-title"
      >
        One
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubOne
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-check"
            role="presentation"
          >
            <use
              href="/foo/bar#check"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      class="multi-step-item complete multi-step-item-expand"
    >
      <div
        class="multi-step-title"
      >
        Two
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubTwo
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-check"
            role="presentation"
          >
            <use
              href="/foo/bar#check"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      class="multi-step-item active multi-step-item-expand"
    >
      <div
        class="multi-step-title"
      >
        Three
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubThree
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          3
        </button>
      </div>
    </li>
    <li
      class="multi-step-item"
    >
      <div
        class="multi-step-title"
      >
        Four
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubFour
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          4
        </button>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ClayMultiStepNav renders 1`] = `
<div>
  <ol
    class="multi-step-nav multi-step-nav-collapse-sm multi-step-indicator-label-bottom"
  >
    <li
      class="multi-step-item complete multi-step-item-expand"
    >
      <div
        class="multi-step-title"
      >
        One
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubOne
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-check"
            role="presentation"
          >
            <use
              href="/foo/bar#check"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      class="multi-step-item active multi-step-item-expand"
    >
      <div
        class="multi-step-title"
      >
        Two
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubTwo
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          2
        </button>
      </div>
    </li>
    <li
      class="multi-step-item multi-step-item-expand"
    >
      <div
        class="multi-step-title"
      >
        Three
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubThree
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          3
        </button>
      </div>
    </li>
    <li
      class="multi-step-item"
    >
      <div
        class="multi-step-title"
      >
        Four
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubFour
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          4
        </button>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ClayMultiStepNavWithBasicItems renders 1`] = `
<div>
  <ol
    class="multi-step-nav multi-step-nav-collapse-sm multi-step-indicator-label-bottom"
  >
    <li
      class="multi-step-item active multi-step-item-expand"
    >
      <div
        class="multi-step-title"
      >
        One
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubOne
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          1
        </button>
      </div>
    </li>
    <li
      class="multi-step-item"
    >
      <div
        class="multi-step-title"
      >
        Two
      </div>
      <div
        class="multi-step-divider"
      />
      <div
        class="multi-step-indicator"
      >
        <div
          class="multi-step-indicator-label"
        >
          SubTwo
        </div>
        <button
          class="multi-step-icon"
          type="button"
        >
          2
        </button>
      </div>
    </li>
  </ol>
</div>
`;
